# notbot

./: .gitignore  Cargo.toml  LICENSE  README.md  at.go  clippy.toml  console.toml  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  helpers.go  jitsi.go  notbot.example.toml  notifier.go  plugins.go  shell.nix  spaceapi.go
checkinator-test/: at.json
src/: alerts.rs  autojoiner.rs  basicplugin.rs  botmanager.rs  commands.rs  config.rs  db.rs  forgejo.rs  gerrit.rs  inviter.rs  jitsi.rs  kasownik.rs  klaczdb.rs  lib.rs  metrics.rs  module.rs  notbottime.rs  notmun.rs  prelude.rs  sage.rs  shenanigans.rs  spaceapi.rs  tools.rs  webterface.rs  wolfram.rs
templates/matrix/: forgejo-formatted.html  forgejo-observer.html  gerrit-message.html  help-generic.html  help-list.html  help-message.html  help-module.html  help-worker.html
templates/web/: main-anon.html  main.html
webui/static/: landing.css
