[package]
name = "notbot"
version = "0.1.0"
edition = "2021"
autobins = true

[lib]
name = "notbot"

[[bin]]
name = "notbot"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
linkme = "0.3.31"
matrix-sdk = { version = "0.9.0", features = ["sqlite", "e2e-encryption", "anyhow", "markdown"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sasl = "0.5.2"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.1"
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", version = "4.0.0", features = ["component", "dns"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xmpp = "0.6.0"
xmpp-parsers = "0.21.0"
