[package]
name = "notbot"
version = "0.3.0"
edition = "2021"
autobins = true

[lib]
name = "notbot"

[[bin]]
name = "notbot"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = "0.1.11"
lazy_static = "1.5.0"
leon = "3.0.2"
linkme = "0.3.31"
matrix-sdk = { version = "0.11.0", features = ["sqlite", "e2e-encryption", "anyhow", "markdown"] }
mlua = { version = "0.10.3", features = ["async", "serialize", "send", "anyhow", "userdata-wrappers", "luajit", "macros"] }
prometheus = { version = "0.14.0", features = ["process"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
