[package]
name = "notbot"
version = "0.4.3"
edition = "2021"
autobins = true

[lib]
name = "notbot"

[profile.release-lto]
inherits = "release"
lto = true

[[bin]]
name = "notbot"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.3", features = ["macros"] }
axum-oidc = "0.6.0"
bytes = { version = "1.10.1", features = ["serde"] }
console-subscriber = "0.4.1"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
futures = "0.3.31"
http = "1.3.1"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = "0.1.11"
lazy_static = "1.5.0"
leon = "3.0.2"
matrix-sdk = { version = "0.11.0", features = ["sqlite", "e2e-encryption", "anyhow", "markdown"] }
mlua = { version = "0.10.3", features = ["async", "serialize", "send", "anyhow", "userdata-wrappers", "luajit", "macros"] }
prometheus = { version = "0.14.0", features = ["process"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "full", "tracing"] }
tokio-metrics-collector = "0.3.1"
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
